adding a map, not finished yet.